# cx

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  FORMAT.md  LICENSE-APACHE  LICENSE-MIT  README.md
cx-cli/: Cargo.toml  README.md
cx-cli/src/: config.rs  graph_index.rs  indexing.rs  main.rs  overlay.rs
cx-cli/src/commands/: add.rs  build.rs  context.rs  depends.rs  diff.rs  edges.rs  fix.rs  hook.rs  init.rs  inspect.rs  mod.rs  network.rs  path.rs  refresh.rs  remote.rs  search.rs  skill.rs  trace.rs
cx-cli/src/mcp/: mod.rs
cx-core/: Cargo.toml  README.md
cx-core/benches/: bench_helpers.rs  graph_loading.rs  graph_traversal.rs  query_depends.rs  query_impact.rs  query_path.rs  string_intern.rs
cx-core/src/: error.rs  lib.rs
cx-core/src/git/: mod.rs
cx-core/src/graph/: bitvec.rs  csr.rs  edges.rs  kind_index.rs  mod.rs  nodes.rs  string_interner.rs  summary.rs
cx-core/src/query/: bfs.rs  depends.rs  mod.rs  path.rs  trigram.rs
cx-core/src/store/: mmap.rs  mod.rs
cx-extractors/: Cargo.toml  README.md
cx-extractors/benches/: indexing.rs  milestone3.rs
cx-extractors/queries/: c-envvar.scm  c-raw.scm  c-string-constants.scm  c-symbols.scm  cpp-envvar.scm  cpp-grpc-client.scm  cpp-http-client.scm  cpp-raw.scm  cpp-string-constants.scm  cpp-symbols.scm  cpp-websocket.scm  go-envvar.scm  go-grpc-client.scm  go-grpc-server.scm  go-http-client.scm  go-http-server.scm  go-messagequeue.scm  go-raw.scm  go-resource.scm  go-string-constants.scm  go-symbols.scm  go-websocket.scm  java-raw.scm  python-envvar.scm  python-grpc-client.scm  python-grpc-server.scm  python-http-client.scm  python-http-server.scm  python-messagequeue.scm  python-raw.scm  python-resource.scm  python-string-constants.scm  python-symbols.scm  python-websocket.scm  typescript-envvar.scm  typescript-grpc-client.scm  typescript-http-client.scm  typescript-http-server.scm  typescript-messagequeue.scm  typescript-raw.scm  (+4 more)
cx-extractors/src/: connection_patterns.rs  custom_sinks.rs  grammars.rs  grpc.rs  lib.rs  lsp.rs  manifest.rs  pipeline.rs  proto.rs  raw_extract.rs  sink_registry.rs  taint.rs  universal.rs
cx-extractors/tests/: c_symbols.rs  cpp_symbols.rs  go_envvar.rs  go_http_client.rs  go_http_server.rs  go_messagequeue.rs  go_websocket.rs  python_http_client.rs  python_http_server.rs  python_symbols.rs  typescript_http_client.rs  typescript_http_server.rs  typescript_symbols.rs
cx-languages/: Cargo.toml  README.md
cx-languages/src/: lib.rs
cx-resolution/: Cargo.toml  README.md
cx-resolution/src/: helm_env_resolution.rs  image_resolution.rs  k8s_resolution.rs  lib.rs  proto_matching.rs  resolver.rs  rest_resolution.rs  websocket_resolution.rs
