[package]
name = "cx-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
cx-core = { path = "../cx-core" }
cx-extractors = { path = "../cx-extractors" }
clap = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
rustc-hash = { workspace = true }

[dev-dependencies]
tempfile = "3"
