[package]
name = "cx-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cx"
path = "src/main.rs"

[dependencies]
cx-core = { path = "../cx-core" }
cx-extractors = { path = "../cx-extractors" }
cx-resolution = { path = "../cx-resolution" }
clap = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tokio = { workspace = true }
rustc-hash = { workspace = true }
libc = { workspace = true }

[dev-dependencies]
tempfile = "3"
